--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 plugins {
-    id 'java'
+    id 'java-library'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
 }
 
 group 'co.selim'
-version '1.1.0'
+version '2.0.0'
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 
@@ -12,6 +13,17 @@ repositories {
 }
 
 dependencies {
-    implementation "com.google.code.gson:gson:2.8.5"
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation "junit:junit:4.13"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+}
+
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
